moving this up a step

--- a/bryant.conf
+++ b/bryant.conf
@@ -5,6 +5,8 @@
 # > ircd -H irtoy -d /dev/ttyACM0 /etc/conf.d/bryant.conf 
 # ACSTOP (74 degrees)
 # ACSTART (74 degrees)
+# HEATSTART (72 degrees)
+# HEATSTOP (72 degrees)
 begin remote
 
     name BRYANT
