--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
       - uses: actions/checkout@v2
-      - name: "build"
-        run: make
+      - name: "deps"
+        run: sudo apt-get install -y ninja-build meson
+      - name: "meson"
+        run: meson setup build
+      - name: "ninja"
+        working-directory: build
+        run: ninja
 
